# ForgeDrive

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20260714000000_create_users_table.sql
src/: auth.rs  db.rs  handlers.rs  main.rs  path_utils.rs
templates/: admin.html  files.html  login.html
